testData/org/elixir_lang/inspection/match_operator_instead_of_type_operator_test_case/match_operator.ex
@type status_effects<error descr="Type specifications separate the name from the definition using `::`, not `=`">=</error> [any]
